@@ -8,8 +8,8 @@
 #include "main.h"
 #include "ralloc.h"
 #include "gen.h"
-#include "BuildCmd.h"
 #include "dbuf_string.h"
+#include "../SDCCbuild_cmd.h"
 #include "../SDCCutil.h"
 #include "../SDCCglobl.h"
 #include "../SDCCsystem.h"
